# narrative-maps

./: .gitignore  LICENSE.md  NMVT.py  README.md  pyproject.toml  requirements.txt
.ipynb_checkpoints/: Simulation_Eval-checkpoint.ipynb
data/: crescent.csv  cuba_160.csv  cuba_small.csv  cv_smaller.csv  mix.csv  papers.csv
narratives/: .gitignore  NMVT.py  Untitled.ipynb  cv.npy  cv.pickle  cv_temp.npy  left_story.lp  test.dot  varsdict_cv_40.pickle
narratives/static/: custom.css
preprocessing/: Prepare_Embeddings.ipynb  cv.csv  cv_final.csv  requirements.txt
search/: .gitignore  NMVT_Baseline.py
static/: custom.css  custom_search.css
tests/: .gitignore  Chat GPT Tests.ipynb  Full Data Simulation.ipynb  Linear_Program_Tests.ipynb  Sensitivity_Analysis.ipynb  Simulation_Tests.ipynb  mapper_visualization_output.html
tests/output/: tda.html
tutorial/: TUTORIAL.md
