[tool.poetry]
package-mode = false
name = "narrative-maps"
version = "1.1.1"
description = ""
authors = ["Jeffrey Lim <Jeffrey-Lim@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
pandas = "^2.2.1"
scikit-learn = "^1.4.1.post1"
scipy = "^1.12.0"
matplotlib = "^3.8.3"
jupyter = "^1.0.0"
dash = "^2.15.0"
dash-bootstrap-components = "^1.5.0"
dash-cytoscape = "^1.0.0"
dash-daq = "^0.5.0"
dash-extensions = "^0.1.13"
truecase = "^0.0.14"
openai = "0.28.1"
shap = "^0.44.1"
networkx = "^2.8.8"
hdbscan = "^0.8.33"
nltk = "^3.8.1"
umap-learn = "^0.5.5"
pulp = "^2.8.0"
transformers = "^4.38.1"
sentence-transformers = "^2.4.0"
python-dateutil = "^2.8.2"
ftfy = "^6.1.3"
spacy = "^3.7.4"
en-core-web-trf = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_trf-3.7.3/en_core_web_trf-3.7.3-py3-none-any.whl" }
python-dotenv = "^1.0.1"
werkzeug = "^2.3.8"

[tool.poetry.group.pytorch]
# PyTorch is listed as an optional dependency here, because adding PyTorch with Poetry sucks
optional = true

[tool.poetry.group.pytorch.dependencies]
# Replace this URL with the correct PyTorch version for your system
torch = { url = "https://download.pytorch.org/whl/cu118/torch-2.2.1%2Bcu118-cp312-cp312-win_amd64.whl" }

[tool.poetry.group.pygraphviz]
# PyGraphviz is also an optional dependency here because it installs weirdly on Windows
optional = true

[tool.poetry.group.pygraphviz.dependencies]
# If you're on Windows, you'll need to install PyGraphviz manually: https://pygraphviz.github.io/documentation/stable/install.html#windows
pygraphviz = "^1.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
